feat: GET reporte de pagos
